@@ -22,6 +22,9 @@ Bugs Fixed
 - Objects defining _p_deactivate methods that didn't call base methods
   weren't loaded properly. https://bugs.launchpad.net/zodb/+bug/185066
 
+- Opening a blob with modes 'r+' or 'a' would fail when the blob had no
+  committed changes.
+
 3.9.0b5 (2009-08-06)
 ====================
 
